# AUTOMATED_ML_AdRank_ML

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
docs/: CRITEO.md  TECHNICAL_REPORT.md
notebooks/: 01_walkthrough.ipynb
scripts/: run_criteo.py  run_pipeline.py
sql/: create_impressions_table.sql  feature_aggregation.sql
src/adrank/: cli.py  config.py
src/adrank/auction/: gsp.py  ranking.py
src/adrank/backtest/: backtest.py
src/adrank/bq/: load.py
src/adrank/data/: criteo.py  generate.py  schema.py
src/adrank/eval/: metrics.py
src/adrank/features/: criteo_features.py  engineering.py  spark_features.py
src/adrank/models/: train.py
src/adrank/utils/: common.py
tests/: conftest.py  test_criteo.py  test_data_features.py  test_metrics.py  test_pipeline.py
