[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adrank-ml"
version = "0.1.0"
description = "Marketing performance modeling (CTR/CVR) and GSP-style auction simulation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aditya Desai" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5"]
bq = ["google-cloud-bigquery>=3.17", "db-dtypes>=1.2"]
lgbm = ["lightgbm>=4.1"]
dev = ["pytest>=7.4"]

[project.scripts]
adrank = "adrank.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
